[Start] likes index

--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -32,3 +32,7 @@
 <div class="row">
   <%= link_to "　取引情報", supply_receipt_path, class: "col-xs-12 btn btn-default glyphicon glyphicon-book" %>
 </div></br>
+
+<div class="row">
+  <%= link_to "　keep一覧", likes_path(current_user), class: "col-xs-12 btn btn-default glyphicon glyphicon-book" %>
+</div></br>
