--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,15 +27,16 @@
         <div class="collapse navbar-collapse" id="navbarEexample7">
           <ul class="nav navbar-nav">
             <% if user_signed_in? %>
-              <li class="item"><%=link_to 'ホーム', supplies_path %></li>
+              <li class="item"><%=link_to 'ホーム', root_path %></li>
               <li class="item"><%=link_to 'マイページ', user_path(current_user.id) %></li>
               <li class="item"><%=link_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
           </ul>
           <p class="navbar-text navbar-right">ようこそ<%= current_user.first_name %>さん。</p>
             <% else %>
-              <li class="item"><%=link_to 'ホーム', supplies_path %></li>
+              <li class="item"><%=link_to 'ホーム', root_path %></li>
               <li class="item"><%=link_to 'サービス概要', '#' %></li>
-              <li class="item"></li>
+              <li class="item"><%=link_to '新規会員登録', new_user_registration_path %></li>
+              <li class="item"><%=link_to 'ログイン', new_user_session_path %></li>
           </ul>
             <% end %>
         </div>
