--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -1,7 +1,5 @@
 <table class="table">
-
   <tr><%= attachment_image_tag user, :user_image, fallback: "no-image.jpg", size:'150x150' %><tr>
-
   <tr>
     <th>お名前</th>
     <th><%= user.first_name %><%= user.last_name %></th>
@@ -14,25 +12,22 @@
     <th>自己紹介文</th>
     <th><%= user.introduction %></th>
   </tr>
-
 </table>
 
-<div class="row">
-  <%= link_to "　プロフィールを編集", edit_user_path(current_user), class: "col-xs-12 btn btn-default glyphicon glyphicon-wrench" %>
-</div></br>
-
-<div class="row">
-  <%= link_to "　物資を投稿", new_supply_path , class: "col-xs-12 btn btn-default glyphicon glyphicon-plus" %>
-</div></br>
-
-<div class="row">
-  <%= link_to "　配送先情報", user_addresses_path(current_user), class: "col-xs-12 btn btn-default glyphicon glyphicon-road" %>
-</div></br>
-
-<div class="row">
-  <%= link_to "　取引情報", supply_receipt_path, class: "col-xs-12 btn btn-default glyphicon glyphicon-book" %>
-</div></br>
-
-<div class="row">
-  <%= link_to "　keep一覧", likes_path(current_user), class: "col-xs-12 btn btn-default glyphicon glyphicon-book" %>
-</div></br>
+<div class='row'>
+  <div class='col-md-12'>
+  <div class="dropdown">
+    <button type="button" class="btn btn-secondary dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      メニュー
+    </button>
+    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+      <%= link_to "物資を投稿", new_supply_path , class: "dropdown-item" %>
+      <%= link_to "取引情報", supply_receipt_path(current_user.id), class: "dropdown-item" %>
+      <%= link_to "配送先情報", user_addresses_path(current_user), class: "dropdown-item" %>
+      <%= link_to "keep一覧", likes_path(current_user), class: "dropdown-item" %>
+      <div class="dropdown-divider"></div>
+      <%= link_to "プロフィールを編集", edit_user_path(current_user), class: "dropdown-item" %>
+    </div>
+  </div>
+</div>
+</div>
