--- a/app/views/histories/receipt.html.erb
+++ b/app/views/histories/receipt.html.erb
@@ -1,10 +1,46 @@
-<h2><取引履歴></h2></br>
+<p><購入履歴></p></br>
 <div class='container'>
-  <% @histories.each do |history| %>
+  <% @histories_passive.each do |history| %>
     <% history.supply.images.each do |image| %>
         <div class="card">
           <div class="card-header">
             <p>注文日: <%= history.created_at.strftime('%Y/%m/%d') %>  配送先: <%= history.shipping %></p>
+            <p>取引相手:<%= link_to history.supporter.first_name, user_path(history.supporter.id) %></p>
+          </div>
+          <div class="card-body">
+            <div calss='card'>
+              <div class='row'>
+                <div class='col-md-3'>
+                  <%= attachment_image_tag image, :supply_image, :fill, 150, 150, class:"product-image" %>
+                </div>
+                <div class='col-md-5'>
+                  <p>【商品名】<%= history.supply.title %></p>
+                </div>
+                <div class='col-md-4'>
+                  <%= form_for(history, url: status_path(history.id)) do |f| %>
+                    <p>配送状況: <%= history.receipt_status_i18n %></p>
+                    <% if history.receipt_status != 'acceptance' %>
+                      <%= f.hidden_field :receipt_status, value: 'acceptance' %>
+                      <%= f.submit '受け取り完了' %>
+                    <% end %>
+                  <% end %>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div><br>
+    <% end %>
+  <% end %>
+</div>
+<hr>
+<p><販売履歴></p></br>
+<div class='container'>
+  <% @histories_active.each do |history| %>
+    <% history.supply.images.each do |image| %>
+        <div class="card">
+          <div class="card-header">
+            <p>注文日: <%= history.created_at.strftime('%Y/%m/%d') %>  配送先: <%= history.shipping %></p>
+            <p> 取引相手 <%= link_to history.supporter.first_name, user_path(history.supporter.id) %></p>
           </div>
           <div class="card-body">
             <div calss='card'>
@@ -13,14 +49,22 @@
                   <%= attachment_image_tag image, :supply_image, :fill, 150, 150, class:"product-image" %>
                 </div>
                 <div class='col-md-6'>
-                  <p> 取引相手 <%= link_to history.supporter.first_name, user_path(history.supporter.id) %></p>
                   <p>【商品名】<%= history.supply.title %></p>
                 </div>
                 <div class='col-md-3'>
-                  <p>配送状況:<%= history.receipt_status %></p>
+                  <%= form_for(history, url: status_path(history.id)) do |f| %>
+                  <p>配送状況: <%= history.receipt_status_i18n %></p>
+                    <% if history.receipt_status != 'acceptance' %>
+                      <%= f.select :receipt_status, History.receipt_statuses.except(:acceptance).keys.map {|k| [I18n.t("enums.history.receipt_status.#{k}"), k]} %>
+                      <%= f.submit '更新'%>
+                    <% end %>
+                  <% end %>
                 </div>
               </div>
             </div>
+          </div>
+          <div class='label' style='float: right;'>
+            <%= link_to '情報印刷', label_path(history.id), class:'btn btn-warning' %>
           </div>
         </div><br>
     <% end %>
