--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,41 +9,73 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <nav class="navbar navbar-inverse">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbarEexample7">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">
-            KIMOCHI
-          </a>
-        </div>
+<body>
+  <nav class="navbar navbar-expand navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">feelings</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="ナビゲーションの切替">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-        <div class="collapse navbar-collapse" id="navbarEexample7">
-          <ul class="nav navbar-nav">
-            <% if user_signed_in? %>
-              <li class="item"><%=link_to 'ホーム', root_path %></li>
-              <li class="item"><%=link_to 'マイページ', user_path(current_user.id) %></li>
-              <li class="item"><%=link_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
-          </ul>
-          <p class="navbar-text navbar-right">ようこそ<%= current_user.first_name %>さん。</p>
-            <% else %>
-              <li class="item"><%=link_to 'ホーム', root_path %></li>
-              <li class="item"><%=link_to 'サービス概要', '#' %></li>
-              <li class="item"><%=link_to '新規会員登録', new_user_registration_path %></li>
-              <li class="item"><%=link_to 'ログイン', new_user_session_path %></li>
-          </ul>
-            <% end %>
-        </div>
-      </div>
-    </nav>
-    <div class='container content'>
-     <%= yield %>
+    <div class="collapse navbar-collapse" id="navbar">
+      <ul class="navbar-nav mr-auto">
+        <% if user_signed_in? %>
+          <li class="nav-item active">
+            <%=link_to 'ホーム', root_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item active">
+            <%=link_to 'マイページ', user_path(current_user.id), class: 'nav-link' %>
+          </li>
+          <li class="nav-item active">
+            <%=link_to 'ログアウト', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+          </li>
+        <% else %>
+          <li class="nav-item active">
+            <%=link_to 'ホーム', root_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item active">
+            <%=link_to 'サービス概要', home_index_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item active">
+            <%=link_to '新規会員登録', new_user_registration_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item active">
+            <%=link_to 'ログイン', new_user_session_path, class: 'nav-link' %>
+          </li>
+        <% end %>
+      </ul>
+      <form class="form-inline my-2 my-md-0">
+        <%= form_with url: root_path, method: :get, local: true do |f| %>
+          <%= f.text_field :search, :placeholder => "検索ワード"%>
+          <% f.submit %>
+        <% end %>
+      </form>
     </div>
+  </nav>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+      <main class='container'>
+        <%= yield %>
+      </main>
+
   </body>
 </html>
