--- a/app/views/supplies/_like.html.erb
+++ b/app/views/supplies/_like.html.erb
@@ -1,15 +1,28 @@
-<% if current_user.already_liked?(supply) %>
-<li>
-  <%= link_to supply_like_path(supply), method: :delete, remote: true do %>
-    <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
+<% if user_signed_in? %>
+
+  <% if current_user.already_liked?(supply) %>
+  <li>
+    <%= link_to supply_like_path(supply), method: :delete, remote: true do %>
+      <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
+    <% end %>
+    <%= supply.likes.count %> いいね
+  </li>
+  <% else %>
+  <li>
+    <%= link_to supply_likes_path(supply), method: :post, remote: true do %>
+      <i class="fa fa-heart-o" aria-hidden="true"></i>
+    <% end %>
+    <%= supply.likes.count %> いいね
+  </li>
   <% end %>
-  <%= supply.likes.count %> いいね
-</li>
+
 <% else %>
+
+
 <li>
-  <%= link_to supply_likes_path(supply), method: :post, remote: true do %>
-    <i class="fa fa-heart-o" aria-hidden="true"></i>
-  <% end %>
+    <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
   <%= supply.likes.count %> いいね
 </li>
+
+
 <% end %>
